2007-10-22  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/particle.cpp: Plugged memory leak.
	* src/gui/connection.cpp, src/gui/connection.h: Simplified code.
	Plugged memory leak.
	* src/configuration.cpp, src/main.cpp: Plugged memory leak. Cleaned
	code.

2007-10-21  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/window.cpp, src/gui/window.h: Removed redundant resizable
	flag. Factored moving/resizing code, so that events are fired only
	once per size change. Added automatic layout reflowing on resize.
	* src/gui/widgets/layout.cpp: Allowed for decreasing sizes in layout.
	* src/gui/inventorywindow.cpp, src/gui/inventorywindow.cpp: Delegated
	resizing events to layout handler.
	* src/gui/widgets/layout.cpp, src/gui/widgets/layout.h: Renamed padding
	to spacing. Added margin around layout. Constified code.
	* src/gui/window.cpp, src/gui/login.cpp, src/gui/char_select.cpp,
	src/gui/serverdialog.cpp, src/gui/inventorywindow.cpp: Removed window
	padding and replaced it by layout margin, so that the grip on resizable
	window is not outside the inner clip area.
	* src/engine.cpp, src/engine.h, src/game.cpp: Fixed current map not
	deleted on server change.
	* src/gui/inventorywindow.cpp, src/gui/inventorywindow.h: Removed
	redundant destructor.
	* src/resources/monsterdb.cpp: Plugged memory leak in database reader.
	* src/resources/spritedef.cpp: Plugged memory leak in sprites.
	* src/gui/quitdialog.cpp: Plugged memory leak in quit dialog.
	* src/resources/iteminfo.cpp, src/resources/iteminfo.h: Plugged memory
	leak in equipment sound.
	* src/resources/action.cpp: Fixed double-free of sprite actions.
	* data/maps/new_1-1.tmx: Added back a Lua script for testing.
	* src/gui/trade.cpp: Added persistent positioning.
	* src/gui/menuwindow.cpp: Fixed missing pixels at bottom and right.
	* src/gui/window.cpp, src/gui/window.h: Changed to use default values
	when restoring missing settings.